--- a/src/App.css
+++ b/src/App.css
@@ -8,53 +8,99 @@
 }
 
 body {
-  background-color: rgb(127, 124, 221);
+  background-color: rgb(127, 124, 221) !important;
 }
 
 .container {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   margin: 20% auto;
-  background-color: #fff;
-  border-radius: 12px;
-  width: 60%;
+  width: 90% !important;
 }
 
 .first_block {
   background-color: rgb(36, 34, 96);
   padding: 24px;
   color: #fff;
-  width: 30%;
-  border-radius: 12px 0 0 12px;
-
+  border-radius: 12px 12px 0 0;
 }
 
-.first_block h2{
-margin: 18px 0 38px 0 ;
+.first_block h2 {
+  margin: 18px 0 38px 0;
 }
 
-.first_block p{
+.first_block p {
   opacity: 0.5;
 }
 
 .second_block {
   padding: 24px;
+  background-color: #fff;
+  border-radius: 0 0 12px 12px;
 }
+
 .first_row {
   display: flex;
   justify-content: space-between;
   flex-direction: row;
 }
 
-.second_block h2{
-  margin: 18px 0 38px 0 ;
-  }
+.first_row p {
+  opacity: 0.5;
+  margin: 0;
+}
+
+.second_block h2 {
+  margin: 31px 0 87px 0;
+}
 
 button {
-  padding: 8px 15px;
+  padding: 12px 30px;
   background-color: rgb(36, 34, 96);
   color: #fff;
-  border-radius: 12px;
-  display: flex;
-  justify-content: flex-end; 
+  border-radius: 24px !important;
+  position: absolute;
+  right: 24px;
+  bottom: 24px;
+  box-shadow:
+    0 5px 12px rgba(36, 34, 96, 0.5),
+    0 5px 12px rgba(36, 34, 96, 0.5);
+
 }
+
+.progress-line {
+  width: 120px;
+}
+
+.progress-p {
+text-align: right;
+}
+
+@media (min-width: 768px) {
+  .container {
+    display: flex;
+    flex-direction: row;
+    margin: 20% auto;
+    border-radius: 12px;
+    width: 60% !important;
+  }
+  
+  .first_block {
+    background-color: rgb(36, 34, 96);
+    padding: 24px;
+    color: #fff;
+    border-radius: 12px 0 0 12px;
+  }
+  .second_block {
+    padding: 24px;
+    background-color: #fff;
+    width: 70%;
+    border-radius: 0 12px 12px 0;
+  }
+  .second_block h2 {
+    margin: 2px 0 48px 0;
+  }
+  .progress-line {
+    width: 200px;
+  }
+  }
